--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@alan-ai/alan-sdk-web": "^1.8.16",
-    "@material-ui/core": "^4.11.3",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.2",
-    "classnames": "^2.2.6",
+    "@alan-ai/alan-sdk-web": "^1.8.54",
+    "@material-ui/core": "^4.12.4",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "classnames": "^2.5.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
+    "react-dom": "^17.0.2",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^0.2.4",
     "words-to-numbers": "^1.5.1"
   },
